@@ -1,6 +1,7 @@
 package com.auth.mfa;
 
 import com.auth.core.api.model.Principal;
+import com.auth.core.utils.Strings;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.LinkedHashSet;
@@ -8,6 +9,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /** 보호된 액션이거나 전달된 위험도가 임계값 이상일 때 MFA를 요구합니다. */
 public final class ActionOrRiskBasedMfaPolicy implements MfaPolicy {
@@ -25,14 +27,14 @@ public final class ActionOrRiskBasedMfaPolicy implements MfaPolicy {
 	) {
 		this.protectedActions = normalizeActions(protectedActions);
 		this.minimumRiskLevel = minimumRiskLevel;
-		this.preferredFactors = preferredFactors == null ? List.of() : List.copyOf(preferredFactors);
+		this.preferredFactors = preferredFactors == null ? com.auth.core.utils.CollectionUtils.listOf() : com.auth.core.utils.CollectionUtils.copyList(preferredFactors);
 		this.reason = reason;
 	}
 
 	@Override
 	public MfaRequirement evaluate(Principal principal, MfaChallengeContext context, List<MfaEnrollment> enrollments) {
 		MfaChallengeContext challengeContext = context == null ? MfaChallengeContext.empty() : context;
-		List<MfaEnrollment> resolvedEnrollments = enrollments == null ? List.of() : List.copyOf(enrollments);
+		List<MfaEnrollment> resolvedEnrollments = enrollments == null ? com.auth.core.utils.CollectionUtils.listOf() : com.auth.core.utils.CollectionUtils.copyList(enrollments);
 
 		boolean actionMatch = challengeContext.getActionIfPresent()
 			.map(ActionOrRiskBasedMfaPolicy::normalizeAction)
@@ -49,12 +51,12 @@ public final class ActionOrRiskBasedMfaPolicy implements MfaPolicy {
 			? availableFactors
 			: preferredFactors.stream()
 				.filter(availableFactors::contains)
-				.toList();
+				.collect(Collectors.toList());
 
 		return MfaRequirement.required(
 			acceptedFactors,
 			resolveReason(actionMatch, riskMatch),
-			Map.of(
+			com.auth.core.utils.CollectionUtils.mapOf(
 				"action_match", actionMatch,
 				"risk_match", riskMatch,
 				"enrolled_factor_count", resolvedEnrollments.size()
@@ -63,20 +65,20 @@ public final class ActionOrRiskBasedMfaPolicy implements MfaPolicy {
 	}
 
 	private String resolveReason(boolean actionMatch, boolean riskMatch) {
-		if (reason != null && !reason.isBlank()) return reason;
+		if (!Strings.isBlank(reason)) return reason;
 		if (actionMatch && riskMatch) return "mfa required for protected action and elevated risk";
 		if (actionMatch) return "mfa required for protected action";
 		return "mfa required for elevated risk";
 	}
 
 	private static Set<String> normalizeActions(Collection<String> actions) {
-		if (actions == null || actions.isEmpty()) return Set.of();
+		if (actions == null || actions.isEmpty()) return com.auth.core.utils.CollectionUtils.setOf();
 		LinkedHashSet<String> normalized = new LinkedHashSet<>();
 		for (String action : actions) {
 			String value = normalizeAction(action);
-			if (!value.isBlank()) normalized.add(value);
+			if (!Strings.isBlank(value)) normalized.add(value);
 		}
-		return Set.copyOf(normalized);
+		return com.auth.core.utils.CollectionUtils.copySet(normalized);
 	}
 
 	private static String normalizeAction(String action) {
